--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
+    
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+
+    <video src="resources/videos/excursion.mp4" autoplay muted loop>Video not compatible</video>
+
+    <h2>Your personal travel guide</h2>
+
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    <img src="resources/images/camp.jpg" alt="camp">
+
+    <p><img src="resources/images/phone.png" alt="phone"></p>
+
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+
+    <p id="copyright">&copy; Excursion</p>
+
+
 </body>
 </html>
