--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
     <p><a href="#">Download Excursion (Coming soon!)</a></p>
 
-    <p id="copyright">&copy; Excursion</p>
-
+    <p id="copyright">&copy; MB Excursion</p>
 
 </body>
 </html>
